Segundo commit cambios en hora

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <img src="img/images.png" alt="Logo">
                 <div class="info-bottom">
                     <div class="dato">
-                        <span class="label">HORA:</span>
+                        <span class="label">HORA LOCAL:</span>
                         <span class="valor" id="hora1"></span>
                     </div>
                     <div class="dato">
@@ -48,7 +48,7 @@
                 <img src="img/images.png" alt="Logo">
                 <div class="info-bottom">
                     <div class="dato">
-                        <span class="label">HORA:</span>
+                        <span class="label">HORA LOCAL:</span>
                         <span class="valor" id="hora2"></span>
                     </div>
                     <div class="dato">
