--- a/index.html
+++ b/index.html
@@ -14,16 +14,18 @@
 
     <link rel="stylesheet" href="style.css">
 
+
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Lora&family=Merriweather&display=swap"
-        rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Carattere&display=swap" rel="stylesheet">
+
 
 </head>
 
 
 <body>
-    <div class="pantallas">   
+    <div class="pantallas">
 
         <!-- Pantalla 1 (960x960) -->
         <div class="pantalla cuadrada">
